# backend

./: .env.example  .gitignore  DATABASE_IMPROVEMENTS_SUMMARY.md  Dockerfile  Planning.md  README.md  REDIS_SETUP.md  Tasks.md  alembic.ini  alembic_manual.md  api_endpoint_test.md  main.py  pyproject.toml  test_db.py  test_redis_resilience.py
.cursor/: README.md  ai-instructions.md  coding-standards.md  rules.json
.cursor/snippets/: async-function.json  audit-log.json  database-query.json  error-handling.json  jwt-token.json  password-validation.json
.cursor/templates/: dependency.py  endpoint.py  model.py  schema.py  service.py
alembic/: env.py  script.py.mako
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  auth.py  cache.py  health.py  oauth.py  users.py
app/core/: __init__.py  security.py
app/database/: __init__.py  connection.py  monitoring.py  transactions.py
app/middleware/: __init__.py  rate_limit.py  security.py
app/models/: __init__.py  audit.py  base.py  email_verification.py  session.py  user.py
app/repositories/: __init__.py  base.py  user.py
app/schemas/: __init__.py  auth.py
app/services/: __init__.py  auth_service_improved.py  email_service.py  email_verification_service.py  enhanced_user_service.py  oauth_providers.py  password_reset_service.py  redis_service.py  session_service.py  user_service.py
app/tests/: __init__.py
app/utils/: url_utils.py
tests/: test_oauth_endpoints.py
