[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Use FastAPI to build a reliable, scalable and robust backend RESTful API services for fullstack application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.1",
    "pytest>=7.4.3",
    "httpx>=0.25.2",
    "pytest-asyncio>=0.21.1",
    "aiosqlite>=0.19.0",
    "email-validator>=2.2.0",
]

